instructions.Instructions.scala.error
Erreur de compilation :
Instructions:12: error: not found: value droit
droit() 
^