instructions.Instructions.scala.code
baisseBrosse()
droite()
droite()
avance()
avance()
avance()
gauche()
gauche()
gauche()
recule()
leveBrosse()
droit()